--- a/example.html
+++ b/example.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>{% load static %}
+<!DOCTYPE html>
 <html lang="zh-cn" style="height: 100%" data-bs-theme="auto">
     <head>
         <meta charset="UTF-8">
