--- a/example.html
+++ b/example.html
@@ -85,7 +85,7 @@ async function loadResource(cdnPrefixes, suffix, sri, useCdn) {
             await loadPromise;
             console.log(`✅ 加载成功: ${suffix}`);
         } catch {
-            console.warn(`❌ 加载失败: ${url}`);
+            console.warn(`❌ 加载失败: ${suffix}`);
         }
         return;
     }
